--- a/public/API_DOC.html
+++ b/public/API_DOC.html
@@ -16,12 +16,10 @@
     <link rel="icon" type="image/png" href="/assets/greentest-logo-grey-32-32.png" data-qa="tab-favicon">
     <title>Greentest API 接口文档</title>
 
-    <link rel="stylesheet" href="assets/doc_detail.min.css">
-    <link rel="stylesheet" href="assets/doc_sandalstrap.min.css">
-
-    <!-- 高亮未与 markdown兼容  -->
-    <link href="assets/doc_markdown_views.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/doc_atom-one-light.css">
+    <link rel="stylesheet" href="https://csdnimg.cn/release/phoenix/template/css/detail-4397b8929e.min.css">
+    <link rel="stylesheet" href="https://csdnimg.cn/public/sandalstrap/1.4/css/sandalstrap.min.css">
+    <link rel="stylesheet" href="https://csdnimg.cn/release/phoenix/mdeditor/markdown_views-258a4616f7.css">
+    <link rel="stylesheet" href="https://csdnimg.cn/release/blog_editor_html/release1.3.8/ckeditor/plugins/codesnippet/lib/highlight/styles/atom-one-light.css">
 
 </head>
 <body class="nodata" >
